# idtech4amm_quake4_sdk

./: .gitignore  README.md  gradle.properties  idtech4amm_quake4_sdk.keystore  settings.gradle
.github/workflows/: android.yml
neo/: .gitignore  CMakeLists.txt  build_arm32.bat  build_arm64.bat
neo/idlib/: precompiled.h
neo/renderer/: qgl.h
quake4/: build.gradle
quake4/src/main/: AndroidManifest.xml
quake4/src/main/java/com/karin/idTech4Amm/SDK/: KConstants.java  KGameIntent.java  KUtils.java  KidTech4Command.java  KidTechCommand.java
quake4/src/main/java/com/karin/quake4/: Main.java
quake4/src/main/res/values/: strings.xml
quake4/src/main/res/values-ru/: strings.xml
quake4/src/main/res/values-zh/: strings.xml
